public interface StockExchange {
    double getPrice(String stockName);
}
